# corundum

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md
engine/: CMakeLists.txt
engine/include/corundum/: engine.hpp  engine_factory.hpp
engine/include/corundum/anim/sys/: anim_sys.hpp
engine/include/corundum/audio/: audio_backend.hpp
engine/include/corundum/audio/sys/: audio_sys.hpp
engine/include/corundum/core/: files.hpp  game_config.hpp  json_io.hpp  json_schema.hpp
engine/include/corundum/core/containers/: handle.hpp
engine/include/corundum/core/log/: log.hpp
engine/include/corundum/core/math/: vec.hpp
engine/include/corundum/core/memory/: debug_alloc.hpp  pool.hpp
engine/include/corundum/core/string/: string_id.hpp
engine/include/corundum/core/time/: loop_timer.hpp
engine/include/corundum/debug/: debug_overlay.hpp
engine/include/corundum/gameplay/: flags.hpp  word_wrap.hpp
engine/include/corundum/gameplay/component/: animation_table.hpp  collision_table.hpp  components.hpp  dialogue_table.hpp  facing_table.hpp  motion_sprite_table.hpp  sparse_index.hpp  sprite_table.hpp  table_concepts.hpp  transform_name_table.hpp  (+1 more)
engine/include/corundum/input/: actions.hpp
engine/include/corundum/physics/: collision.hpp  walkability.hpp
engine/include/corundum/platform/: gpu_context.hpp  platform_factory.hpp  renderer.hpp  texture_cache.hpp  window.hpp
engine/include/corundum/resources/: atlas_clips.hpp  atlas_clips_loader.hpp  atlas_clips_serializer.hpp  character_registry.hpp  character_sheet_loader.hpp  character_sheet_serializer.hpp  sprite.hpp  sprite_atlas.hpp  sprite_sheet_clips.hpp  sprite_sheet_clips_loader.hpp  sprite_sheet_clips_serializer.hpp
engine/src/: engine.cpp  engine_factory.cpp  pch.hpp
engine/src/anim/sys/: anim_sys.cpp
engine/src/audio/sys/: audio_sys.cpp
engine/src/core/: files.cpp  game_config.cpp  json_io.cpp  json_schema.cpp
engine/src/debug/: debug_overlay.cpp
engine/src/gameplay/dialogue/: action.cpp  expr.cpp  loader.cpp  query.cpp  registry.cpp  serialize.cpp  system.cpp  validate.cpp
engine/src/gameplay/quest/: loader.cpp  registry.cpp  serialize.cpp  system.cpp  validate.cpp
engine/src/gameplay/sys/: camera_system.cpp  dialogue_system.cpp  pathfinding.cpp  picking.cpp
engine/src/gameplay/ui/: dialog_box.cpp  nine_patch.cpp
engine/src/gameplay/world/: map_view.cpp  spawn.cpp  transition.cpp  update.cpp
engine/src/input/sys/: input_sys.cpp
engine/src/physics/: collision.cpp  walkability.cpp
engine/src/physics/sys/: physics_sys.cpp
engine/src/platform/: CMakeLists.txt
engine/src/platform/glfw/: font_atlas.cpp  font_atlas.hpp  glfw_window.cpp  glfw_window.hpp  glfw_window_metal.h  glfw_window_metal.mm  gpu_context.cpp  input_translator.cpp  input_translator.hpp  platform_factory.cpp  sokol_impl.cpp  sokol_renderer.cpp  sokol_renderer.hpp  texture_cache.cpp
engine/src/platform/null/: null_renderer.hpp
engine/src/platform/sokol/: sokol_audio_backend.cpp  sokol_audio_backend.hpp  sokol_audio_impl.cpp
engine/src/render/sys/: render_sys.cpp
engine/src/resources/: atlas_clips.cpp  atlas_clips_loader.cpp  atlas_clips_serializer.cpp  character_registry.cpp  character_sheet_loader.cpp  character_sheet_serializer.cpp  sprite_atlas_loader.cpp  sprite_sheet_clips_loader.cpp  sprite_sheet_clips_serializer.cpp
tests/: CMakeLists.txt  test_actions.cpp  test_atlas_clips.cpp  test_camera_system.cpp  test_character_sheet_loader.cpp  test_collision.cpp  test_dialogue.cpp  test_elevation_at.cpp  test_engine_events.cpp  test_entity.cpp  test_follow_path.cpp  test_game_config.cpp  test_handle_pool.cpp  test_iso_math.cpp  test_material_at.cpp  test_pathfinding.cpp  test_picking.cpp  test_portals.cpp  test_quest.cpp  test_render_state.cpp  test_spawn_points.cpp  test_sprite.cpp  test_sprite_atlas_loader.cpp  test_tilemap_loader.cpp  test_tilemap_validate.cpp  test_walkability.cpp  test_word_wrap.cpp  test_world_manifest.cpp
tests/fixtures/: find_sword.json  innkeeper.json  type_alias.json
tool_host/: CMakeLists.txt  simgui_impl.cpp
tool_host/assets/: editor_dark.json
tool_host/include/corundum/tool_host/: canvas_controller.hpp  fonts.hpp  shortcuts.hpp  tool_config.hpp  tool_host.hpp  ui_theme.hpp  undo.hpp
tool_host/src/: fonts.cpp  tool_config.cpp  tool_host.cpp  ui_theme.cpp
tools/: CMakeLists.txt  tools.json
tools/editors/common/: canvas_context.hpp  imgui_fonts.hpp  input.hpp  tool_texture.cpp  tool_texture.hpp  ui_theme.cpp  ui_theme.hpp
tools/editors/spritesmith/: coords.hpp  editor_state.hpp  imgui_fonts.hpp  input.cpp  input.hpp  layout.hpp  load.cpp  load.hpp  main.cpp  render_anim_preview.cpp  render_anim_preview.hpp  render_canvas.cpp  render_canvas.hpp  render_preview_panel.cpp  render_preview_panel.hpp  render_side_panel.cpp  render_side_panel.hpp  render_status_bar.cpp  render_status_bar.hpp  save.cpp  save.hpp
tools/editors/talesmith/: editor_state.hpp  file_io.cpp  file_io.hpp  graph_layout.cpp  graph_layout.hpp  layout.hpp  main.cpp  node_type_traits.hpp  render_graph.cpp  render_graph.hpp  render_inspector.cpp  render_inspector.hpp  render_node_list.cpp  render_node_list.hpp  render_quest_editor.cpp  render_quest_editor.hpp  shortcuts.hpp  validate_quest_refs.hpp
tools/editors/tilesmith/: coords.hpp  editor_state.hpp  elevation_paint.cpp  elevation_paint.hpp  fill.cpp  fill.hpp  imgui_fonts.hpp  input.cpp  input.hpp  layout.hpp  main.cpp  new_map_dialog.cpp  new_map_dialog.hpp  paint.cpp  paint.hpp  portal_entry.hpp  ramp_paint.cpp  ramp_paint.hpp  render_canvas.cpp  render_canvas.hpp  render_collision.cpp  render_collision.hpp  render_elevation.cpp  render_elevation.hpp  render_layer_strip.cpp  render_layer_strip.hpp  render_portal.cpp  render_portal.hpp  render_ramps.cpp  render_ramps.hpp  render_status_bar.cpp  render_status_bar.hpp  render_tile_grid.cpp  render_tile_grid.hpp  render_walkability.cpp  render_walkability.hpp  save.cpp  save.hpp  tilemap_encoding.hpp  tilemap_rendering.cpp  (+2 more)
tools/platform/: tool_app.cpp  tool_app.hpp
(+74 files in other folders)
